# metaframer

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: framer.rs  main.rs  resolution.rs  templates.rs
src/framer/: mod.rs  positions.rs  text_values.rs
tests/: files.rs  framer.rs
