[package]
name = "metaframer"
version = "1.0.0"
edition = "2021"
authors = ["Michal Vanko <mklakakilli@gmail.com>"]
license = "MIT"
description = "Metaframer is a tool to generate frames for images from their metadata"
readme = "README.md"
homepage = "https://github.com/michalvankodev/metaframer"
repository = "https://github.com/michalvankodev/metaframer"
keywords = ["cli", "watermark", "exif", "images", "generator"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0.14"
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
clap_derive = { version = "4.5.5" } 
dirs = "5.0.1"
env_logger = "0.11.3"
handlebars = "6.0.0"
image = "0.25.1"
kamadak-exif = "0.5.5"
log = "0.4.21"
predicates = "3.1.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
